--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 [Ll]ogs/
 [Mm]emoryCaptures/
 
+#downloaded assets from store
+[Aa]ssets/SimpleNaturePack
+
+
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
